fixing some text wrap issues and decoration overlaps

--- a/web/static/stylesheets/beta.scss
+++ b/web/static/stylesheets/beta.scss
@@ -21,6 +21,7 @@
 
 * {
     font-family: $mainFontFamily;
+    -webkit-font-smoothing: antialiased;
 }
 
 .row-section, .row-section-alt {
